playbin: Fix sorting for decoder factories for which we didn't find a compatible sink

They might just need some converters for raw audio/video.

https://bugzilla.gnome.org/show_bug.cgi?id=704285